First episode black screen

--- a/src/pages/episode_first/episode_first.html
+++ b/src/pages/episode_first/episode_first.html
@@ -2,9 +2,12 @@
   <require from="./episode_first.scss"></require>
   <section id="episode_first">
     <div ref="map" id="map"></div>
+    <div class="spacer"></div>
     <div class="instructions">
       <p>
-        You can write instructions here.
+        ZQSD / Moving<br>
+        Mouse / Aim<br>
+        E / Interact
       </p>
     </div>
   </section>
