First screen as square working

--- a/src/pages/episode_first/episode_first.html
+++ b/src/pages/episode_first/episode_first.html
@@ -1,8 +1,7 @@
 <template>
   <require from="./episode_first.scss"></require>
   <section id="episode_first">
-    <div ref="map" id="map"></div>
-    <div class="spacer"></div>
+    <div ref="div_map" id="map"></div>
     <div class="instructions">
       <p>
         ZQSD / Moving<br>
